--- a/package.json
+++ b/package.json
@@ -1,1 +1,20 @@
-"author": "Wayland Chin"
+{
+	"name": "fcc-learn-npm-package-json",
+  "author": "Wayland Chin",
+	"dependencies": {
+		"express": "^4.14.0"
+	},
+	"main": "server.js",
+	"scripts": {
+		"start": "node server.js"
+	},
+	"engines": {
+		"node": "8.11.2"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://idontknow/todo.git"
+	}
+}
+
+
